--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <link rel="stylesheet" href="main.css">
 <head>
-   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,7 +41,7 @@
             <div class="col-md-10 col-sm-12">
                 <div class="m-md-5 text-center p-4 bg-white shadow rounded dentist  pb-sm-5 pr-sm-0" id="card">
                     <h2> <strong>PROTECT YOUR TEETH FROM DECAY</strong></h2>
-                    <h5 class="mt-md-3 col-md-11">with a cutting edge patented technology that is molded to your teeth by one of our board certified dentists. Infused with <strong>Diamondclear-technology<sup>&copy;</sup></strong> to add a layer of protection to your teeth.</h5>
+                    <h5 class="mt-md-3 col-md-10">with a cutting edge patented technology that is molded to your teeth by one of our board certified dentists. Infused with <strong>Diamondclear-technology<sup>&copy;</sup></strong> to add a layer of protection to your teeth.</h5>
                     <a href="contact.html" class="btn btn-primary m-4 text-white pr-5 pl-5 p-3">Get started</a>
                 </div>
                 <p class="dr-text"><strong>Dr. Rutten Lamenshield MD</strong></p>
